Loading file changes after refactoring.